<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_v_calculate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cz.myapplication.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/d_editText"
        android:hint="@string/d_input"
        android:inputType="numberDecimal"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="19sp"
        android:layout_alignLeft="@+id/l_editText"
        android:layout_alignStart="@+id/l_editText"
        android:layout_above="@+id/textView2" />

    <Button
        android:text="计算"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:onClick="react"
        android:textSize="22sp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:layout_marginBottom="18dp" />

    <TextView
        android:text="@string/l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textColor="#000000"
        android:textSize="19sp"
        android:layout_below="@+id/textView12"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="9dp"
        android:paddingTop="9dp"
        android:paddingRight="20dp" />

    <TextView
        android:text="@string/h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textColor="#000000"
        android:textSize="19sp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="9dp"
        android:paddingTop="9dp"
        android:paddingRight="20dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/d"
        android:textColor="#000000"
        android:textSize="19sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="9dp"
        android:paddingTop="9dp"
        android:paddingRight="20dp" />

    <TextView
        android:text="@string/p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textColor="#000000"
        android:textSize="19sp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="9dp"
        android:paddingTop="9dp"
        android:paddingRight="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/h_editText"
        android:hint="@string/h_input"
        android:layout_below="@+id/l_editText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/p_editText"
        android:layout_alignStart="@+id/p_editText"
        android:textSize="19sp"
        android:layout_above="@+id/textView5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/p_editText"
        android:hint="@string/p_input"
        android:textSize="19sp"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textView5"
        android:layout_toEndOf="@+id/textView5"
        android:layout_alignTop="@+id/textView5" />

    <TextView
        android:text="@string/v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_below="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="9dp"
        android:paddingTop="9dp" />

    <TextView
        android:text="@string/m"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_below="@+id/textView8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/v_text"
        android:layout_alignEnd="@+id/v_text"
        android:paddingBottom="9dp"
        android:paddingTop="9dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/v_text"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_alignTop="@+id/textView8"
        android:layout_toRightOf="@+id/textView8"
        android:layout_toEndOf="@+id/textView8"
        android:paddingBottom="9dp"
        android:paddingTop="9dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/m_text"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_alignBottom="@+id/textView9"
        android:layout_alignRight="@+id/textView9"
        android:layout_alignEnd="@+id/textView9"
        android:paddingBottom="9dp"
        android:paddingTop="9dp" />



    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/l_editText"
        android:hint="@string/l_input"
        android:inputType="numberDecimal"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="19sp"
        android:layout_above="@+id/textView3"
        android:layout_alignLeft="@+id/h_editText"
        android:layout_alignStart="@+id/h_editText"
        android:layout_below="@+id/d_editText" />


</RelativeLayout>
